<?xml version="1.0" encoding="utf-8"?>
<!--

    Wire
    Copyright (C) 2018 Wire Swiss GmbH

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.waz.zclient.pages.main.profile.views.GuidedEditText
        android:id="@+id/get__sign_in__email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/new_reg__input_height"
        android:layout_marginTop="@dimen/wire__padding__small"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wire__padding__small"
        >

        <com.waz.zclient.pages.main.profile.views.GuidedEditText
            android:id="@+id/get__sign_in__password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_reg__input_height"
            />

        <com.waz.zclient.newreg.views.PhoneConfirmationButton
            android:id="@+id/pcb__signin__email"
            android:layout_height="@dimen/new_reg__input_height"
            android:layout_width="@dimen/new_reg__input_height"
            app:w_font="@string/wire__typeface__light"
            android:textSize="@dimen/wire__text_size__regular"
            android:layout_gravity="right"
            android:gravity="center"
            android:textColor="@color/text__primary_light"
            />
    </FrameLayout>

    <com.waz.zclient.ui.text.TypefaceTextView
        android:id="@+id/ttv_signin_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/wire__padding__small"
        android:text="@string/new_reg__password__forgot"
        android:textAllCaps="true"
        android:textColor="@drawable/selector__simple_text_button"
        android:textSize="@dimen/wire__text_size__small"
        app:w_font="@string/wire__typeface__medium"
        />

</LinearLayout>
