...
                android:layout_width="@dimen/audio_message_recording__slide_control__width"
                android:layout_height="@dimen/audio_message_recording__slide_control__width"
                android:layout_gravity="bottom"
                >

                <com.waz.zclient.ui.text.GlyphTextView
                    android:id="@+id/gtv__audido_message__recording__bottom_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/glyph__microphone_on"
                    android:gravity="center"
                    style="?attr/smallIconButton"
...
            android:layout_width="match_parent"
            android:layout_height="@dimen/wire__divider__height__thin"
            android:layout_marginRight="@dimen/wire__padding__regular"
            />

        <FrameLayout
            android:id="@+id/fl__audio_message__recording__cancel_button_container"
            android:layout_width="@dimen/new_cursor_menu_button_width"
            android:layout_height="@dimen/new_cursor_menu_button_width"
            android:layout_marginRight="@dimen/cursor_toolbar_padding_horizontal_edge"
            >

            <com.waz.zclient.ui.text.GlyphTextView
...
