...
        android:id="@+id/gtv__youtube_message__play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="@dimen/content__youtube__play_button__size"
        android:textColor="@color/content__youtube__text__color"
        android:text="@string/glyph__play"
        />

    <com.waz.zclient.ui.text.TypefaceTextView
        android:id="@+id/ttv__youtube_message__error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
