...
            android:visibility="gone"
        />

    </LinearLayout>

    <com.waz.zclient.conversation.toolbar.AudioMessageRecordingView
        android:id="@+id/amrv_audio_message_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        />

...
